# Domo-House

./: README.md
DomoHouse App/: MainActivity.cs  MainApplication.cs  Mica.Droid.csproj  packages.config
DomoHouse App/DataAccess/: DBAccess.cs  FileAccessHelper.cs  Usuario.cs
DomoHouse App/EventWidgets/Menu/: MenuSlideTab.cs
DomoHouse App/EventWidgets/Register/: RegisterEmail.cs  RegisterEvent.cs  RegisterInfo.cs  RegisterPhoto.cs  RegisterSignIn.cs
DomoHouse App/Properties/: AndroidManifest.xml  AssemblyInfo.cs
DomoHouse App/Resources/: Resource.designer.cs
DomoHouse App/Resources/anim/: fade_in.xml  slide_in.xml  slide_out.xml  slide_right.xml  slide_up.xml
DomoHouse App/Resources/drawable/: ButtonSignStyle.xml  EditTextStyle.xml  ProgressBarStyle.xml  check_door.xml  check_light.xml
DomoHouse App/Resources/layout/: FragmentAbout.axml  FragmentCamera.axml  (+14 more)
DomoHouse App/Security/: Encrypt.cs
DomoHouse App/Server/: Client.cs
DomoHouse Libraries/: Makefile.am  Makefile.in  config.h.in  configure  configure.ac  daemonserver
DomoHouse Libraries/implement/: build.sh
DomoHouse Libraries/include/: ConnRasp.h  Fork.h
DomoHouse Libraries/lib/: ConnRasp.c  ConnRasp.lo  Fork.c  Fork.lo  Makefile  Makefile.am  Makefile.in  libBib.la  libgcc_s.so.1
DomoHouse Libraries/lib/.deps/: ConnRasp.Plo  Fork.Plo
DomoHouse Libraries/lib/.libs/: libConnRasp.la  libConnRasp.so.0  libFork.lai  libFork.so.0.0.0
DomoHouse Libraries/src/: Makefile  Makefile.am  Makefile.in  server.c
DomoHouse Libraries/src/.deps/: server.Po
DomoHouse Libraries/src/.libs/: server
(+11 files in other folders)
